@@ -1,6 +1,7 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractionsintro.intro.view;
 
+import fj.Equal;
 import fj.F;
 import fj.data.List;
 
@@ -53,8 +54,14 @@ public class MovableSliceNode extends PNode {
                 //Flag one slice as dragging
                 @Override public void mousePressed( PInputEvent event ) {
                     PieSet state = model.get();
-//                    model.set( state.slices( state.slices.delete( slice, Equal.<Slice>anyEqual() ).snoc( slice.dragging( true ) ) ) );
-                    model.set( state.slices( state.slices.snoc( slice.dragging( true ) ) ) );
+
+                    //If dragging from the bucket, do not delete the old piece (since bucket should always look like it has an infinite supply)
+                    if ( state.isInBucket( slice ) ) {
+                        model.set( state.slices( state.slices.snoc( slice.dragging( true ) ) ) );
+                    }
+                    else {
+                        model.set( state.slices( state.slices.delete( slice, Equal.<Slice>anyEqual() ).snoc( slice.dragging( true ) ) ) );
+                    }
                 }
 
                 //Set all drag flags to false
